# morelli-ai

./: .gitignore  gunicorn.service  manage.py  pyproject.toml
apps/detector/: apps.py  urls.py  views.py
apps/detector/static/css/: base.css  styles.css
apps/detector/static/js/: script.js
apps/detector/templates/: base.html  image_upload.html
ml/serve/: config.properties  handler_generalized.py  morelli_handler.py  setup_config.json
ml/training/: dataset_downloader.py  train.py
morelli/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: morelli.ai
