[tool.poetry]
name = "morelli-ai"
version = "0.1.0"
description = ""
authors = ["Anis <anisanissakkaf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
django = "^4.1.5"
transformers = "^4.25.1"
datasets = { extras = ["vision"], version = "^2.8.0" }
evaluate = { extras = ["sklearn"], version = "^0.4.0" }
torchserve = "^0.7.0"
torch-model-archiver = "^0.7.0"
torch-workflow-archiver = "^0.2.6"
optimum = "^1.6.1"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.13.1+cu116 torchvision==0.14.1+cu116 -f https://download.pytorch.org/whl/torch_stable.html"
serve-archive = "torch-model-archiver --model-name morelli --version 1.0 --serialized-file ./ml/models/final/pytorch_model.bin --handler ./ml/serve/morelli_handler.py --extra-files './ml/models/final/config.json,./ml/serve/setup_config.json,./ml/models/final/preprocessor_config.json' --export-path ./ml/serve/archive"
serve = "torchserve --start --model-store ./ml/serve/archive --models morelli=morelli.mar --ncs --ts-config ./ml/serve/config.properties"
serve-dev = "torchserve --start --model-store ./ml/serve/archive --models morelli=morelli.mar --ncs --ts-config ./ml/serve/config.properties --foreground"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
poethepoet = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
